--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,7 +30,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: mac-dist
-          path: dist/**
+          path: out/prod/make/**
 
   build-windows:
     runs-on: windows-latest
@@ -56,4 +56,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: windows-dist
-          path: dist/**
+          path: out/prod/make/**
