--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,18 +1,24 @@
-name: Build Electron App
+name: Build & Release Electron App
 
 on:
   push:
-    branches: [ main ]
+    tags:
+      - 'v*'
   workflow_dispatch:
 
 jobs:
-  build-macos:
-    runs-on: macos-latest
+  build:
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [macos-latest, windows-latest]
+    name: Build ${{ matrix.os }}
+
     steps:
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Install Node
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 22
@@ -21,39 +27,33 @@ jobs:
         run: npm install
 
       - name: Build React frontend
-        run: cd app && npm install && npm run build
+        run: |
+          cd app
+          npm install
+          npm run build
 
-      - name: Build macOS app
-        run: npm run make:mac
+      - name: Build Electron app
+        run: |
+          if [ "${{ matrix.os }}" == "macos-latest" ]; then
+            npm run make:mac
+          else
+            npm run make:win
+          fi
 
-      - name: Upload macOS artifacts
-        uses: actions/upload-artifact@v4
+      - name: List output
+        run: ls -la out/prod/make
+
+      - name: Create GitHub Release
+        id: create_release
+        uses: softprops/action-gh-release@v1
         with:
-          name: mac-dist
-          path: out/prod/make/**
+          tag_name: ${{ github.ref_name }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-  build-windows:
-    runs-on: windows-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Install Node
-        uses: actions/setup-node@v4
+      - name: Upload release assets
+        uses: softprops/action-gh-release@v1
         with:
-          node-version: 22
-
-      - name: Install dependencies
-        run: npm install
-
-      - name: Build React frontend
-        run: cd app && npm install && npm run build
-
-      - name: Build Windows app
-        run: npm run make:win
-
-      - name: Upload Windows artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: windows-dist
-          path: out/prod/make/**
+          files: out/prod/make/**
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
