--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,6 +33,7 @@ jobs:
           npm run build
 
       - name: Build Electron app
+        shell: bash
         run: |
           if [ "${{ matrix.os }}" == "macos-latest" ]; then
             npm run make:mac
