--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,8 +3,8 @@ name: Build & Release Electron App
 on:
   push:
     tags:
-      - 'v*'
-  workflow_dispatch:
+      - 'v*' 
+  workflow_dispatch: 
 
 jobs:
   build:
@@ -25,24 +25,27 @@ jobs:
 
       - name: Install dependencies
         run: npm install
+        shell: pwsh
 
       - name: Build React frontend
         run: |
           cd app
           npm install
           npm run build
+        shell: pwsh
 
       - name: Build Electron app
-        shell: bash
         run: |
-          if [ "${{ matrix.os }}" == "macos-latest" ]; then
-            npm run make:mac
-          else
-            npm run make:win
-          fi
+          if ("${{ matrix.os }}" -eq "macos-latest") {
+              npm run make:mac
+          } else {
+              npm run make:win
+          }
+        shell: pwsh
 
       - name: List output
-        run: ls -la out/prod/make
+        run: ls out/prod/make
+        shell: pwsh
 
       - name: Create GitHub Release
         id: create_release
